objects/Idea_Issues__c.object
<CustomObject>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Age__c</fullName>
        <formula>ROUND(NOW()-CreatedDate, 0)</formula>
        <label>Issue Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <label>Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preventable</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipName>Project_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resolution_Strategy__c</fullName>
        <label>Resolution Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Member_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N46000003QcoWEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Idea Issue</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Project Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>